update: Fixed an issue with overlapping text in the summary report.

--- a/src/components/Menu/ReportSummary.css
+++ b/src/components/Menu/ReportSummary.css
@@ -38,14 +38,20 @@
     }
   }
 
-  &__container--fixed {
+  &--fixed &__container {
     position: fixed;
     top: 5px;
-    left: 120px;
+    left: 116px;
   }
 
-  &__icon + span {
+  &__icon + &__label {
     margin-left: 4px;
+  }
+
+  &--fixed &__label {
+    width: 0;
+    height: 0;
+    overflow: hidden;
   }
 
   &__circle {
